# chat-service

./: .dockerignore  .env.bak  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  lefthook.yml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/postgresql/: init.sh
.github/: dependabot.yml
app/: db.py  main.py  settings.py
app/api/: main.py
app/api/auth/: schema.py  use_cases.py  views.py
app/api/chats/: schema.py  use_cases.py  views.py
app/api/messages/: schema.py  use_cases.py  views.py
app/api/sessions/: schema.py  use_cases.py  views.py
app/api/users/: schema.py  use_cases.py  views.py
app/commons/: admin.py  authentication.py  aws_client.py  exceptions.py  logging.py  middlewares.py  redis_cache.py  type_decorators.py  types.py  utils.py
app/config/: local.env  test.env
app/models/: __init__.py  base.py  chat_participants.py  chats.py  messages.py  schema.py  sessions.py  users.py
app/tests/: conftest.py
app/tests/api/auth/: test_views.py
app/tests/api/chats/: test_views.py
app/tests/api/messages/: test_views.py
app/ws/: main.py
app/ws/messages/: repositories.py  schema.py  use_cases.py  views.py
docs/: 1-auth.md  2-users.md  3-sessions.md  4-chats.md  5-messages.md  6-realtime-chatting.md  7-infra.md  8-erd.md
http/: auth.http  chats.http  health.http  messages.http  sessions.http  users.http
locust/: locustfile.py
migrations/versions/: 0d4d9e50356b_update_tables.py  d8022731883e_create_tables.py  f9e96bcb210a_update_tables.py
scripts/: erd.py
sql/: 1-add-test-users.sql  2-reset-increment.sql
(+7 files in other folders)
