[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = ""
authors = ["apusetone"]
packages = [{include = "chat_service"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.14.1"
black = "^24.3.0"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
boto3 = "^1.34.74"
pydantic = "^2.6.4"
email-validator = "^2.1.1"
pyyaml = "^6.0.1"
asyncpg = "^0.29.0"
sqlalchemy-schemadisplay = "^2.0"
pydot = "^2.0.0"
websockets = "^12.0"
types-pyyaml = "^6.0.12.20240311"
time-machine = "2.14.1"
fastapi-cache2 = "^0.2.1"
boto3-stubs = "^1.34.113"
asyncpg-stubs = "^0.29.1"
fastapi-debug-toolbar = "^0.6.3"
authlib = "^1.3.1"
sqladmin = "^0.18.0"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
eqassertions = "^0.4"
httpx = "^0.27.0"
mypy = "^1.9.0"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-randomly = "^3.15.0"
ruff = "^0.3.4"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
